# deep-re-search-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/paper_research_agent/: __init__.py  cli.py  config.py  llm.py  state.py
src/paper_research_agent/agent/: __init__.py  graph.py  registry.py
src/paper_research_agent/api/: main.py  routes.py  schemas.py
src/paper_research_agent/core/: __init__.py  errors.py  logging.py  models.py  state.py
src/paper_research_agent/eval/: failure.py  golden.py  metrics.py  runner.py
src/paper_research_agent/features/: __init__.py
src/paper_research_agent/features/conflicts/: __init__.py  node.py  prompts.py  schemas.py
src/paper_research_agent/features/contrast/: __init__.py  node.py  prompts.py  ranking.py
src/paper_research_agent/features/coverage/: prompts.py
src/paper_research_agent/features/fetching/: __init__.py  dedup.py  node.py  ranking.py  service.py
src/paper_research_agent/features/novelty/: __init__.py
src/paper_research_agent/features/planning/: __init__.py  node.py
src/paper_research_agent/features/writing/: __init__.py  node.py
src/paper_research_agent/mcp/: server.py
src/paper_research_agent/memory/: __init__.py  nodes.py  results.py  store.py
src/paper_research_agent/providers/: arxiv.py  base.py  openalex.py
src/paper_research_agent/tools/: __init__.py  arxiv_tool.py  openalex.py
tests/: test_conflicts.py  test_loop.py  test_mcp.py  test_memory.py  test_ranking.py  test_writing.py
